derive/tests/snapshots/every_field_attribute/Gadget/get_all_gadgets.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `gadget` table.
    pub fn get_all_gadgets<'a>(&'a self) -> impl Iterator<Item = Gadget> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().gadget().iter()
    }
}
