derive/tests/snapshots/every_field_attribute/Gadget/soft_delete_gadgets_by_owner_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**Try to soft-delete all `Gadget` rows in the `gadget` table whose value matches the value from the single-column btree index on the `owner_id` column.

# Disallowed values

Fails with a *Disallowed Value Error* if a column holds what its `#[disallow]` forbids:

- `rating`: `0`*/
    pub fn soft_delete_gadgets_by_owner_id<'a>(
        &'a self,
        owner_id: impl Into<OwnerId>,
    ) -> Result<
        crate::spacetimedsl::delete::DeletionResult,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let owner_id = owner_id.into().value();
        let rows_to_delete: Vec<Gadget> = self
            .db()
            .gadget()
            .owner_id()
            .filter(owner_id)
            .filter(|row| !(row.retired_at.is_some()))
            .collect();
        if rows_to_delete.is_empty() {
            return Ok(crate::spacetimedsl::delete::DeletionResult {
                table_name: "gadget".into(),
                one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::Multiple,
                entries: vec![],
                error_from_hook: None,
            });
        }
        let mut deletion_result_entries = std::collections::HashMap::new();
        for row_to_delete in &rows_to_delete {
            deletion_result_entries
                .insert(
                    &row_to_delete.id,
                    crate::spacetimedsl::delete::DeletionResultEntry {
                        table_name: "gadget".into(),
                        column_name: "id".into(),
                        strategy: crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete,
                        row_value: format!("{}", GadgetId::new(row_to_delete.id.clone()))
                            .into(),
                        child_entries: vec![],
                    },
                );
        }
        for old_row in &rows_to_delete {
            let mut new_row = old_row.clone();
            if new_row.rating == 0 {
                return Err(
                    crate::spacetimedsl::error::SpacetimeDSLError::Error(
                        format!(
                            "Disallowed Value Error while trying to soft delete the row `{}` in the `gadget` table because `rating` is `0`, which `#[disallow(zero)]` forbids!",
                            format!("{{ id : {} }}", new_row.id)
                        ),
                    ),
                );
            }
            new_row
                .retired_at = Some(
                self.ctx().timestamp().expect("a `WriteContext` always has a timestamp"),
            );
            self.db().gadget().id().update(new_row);
        }
        return Ok(crate::spacetimedsl::delete::DeletionResult {
            table_name: "gadget".into(),
            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::Multiple,
            entries: deletion_result_entries.into_values().collect_vec(),
            error_from_hook: None,
        });
    }
}
